changed app cache because it was a bit aggressive

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -4,6 +4,20 @@
     background-color: #E5E5E5;
     font-family: 'RobotoDraft', sans-serif;
   }
+  #splash-screen {
+    position: fixed;
+    z-index: 999;
+    height: 20em;
+    width: 20em;
+    border-style: solid;
+    border-width: 4px;
+    overflow: show;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
   core-header-panel {
     height: 100vh;
   }
@@ -12,10 +26,12 @@
     color: white;
     height: 10vh;
     font-size: 5vh;
-    padding: 0 1vw;
+    padding: 0 2px;
   }
   word-board {
     font-size: 7vh;
+    line-height: 9.3vh;
+    margin-top: 1px;
   }
   .word-board {
     border-bottom-style: solid;
@@ -57,7 +73,7 @@
     font-size: 0;
     vertical-align: bottom;
     bottom: 0;
-    padding: 0 1vw;
+    padding: 0 2px;
     overflow: hidden;
   }
   letter-list {
@@ -125,6 +141,9 @@
 		box-shadow: 0 4px 16px rgba(0,0,0,0.2);
 		overflow: auto;
   }
+  .right-to-left {
+    transform: rotateY(180deg);
+  }
   .container {
     width: 100vw;
   }
@@ -135,7 +154,12 @@
     .content-span {
       font-size: 12vh;
     }
-    
+    core-icon {
+      height: 7vw;
+      width: 7vw;
+      color: white;
+    }
+
   }
   @media screen and (orientation: landscape) {
     letter-card {
