--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -18,7 +18,7 @@
     bottom: 0;
     right: 0;
   }
-  core-header-panel {
+  paper-header-panel {
     height: 100vh;
     content: 'viewport-units-buggyfill; height: 100vh;';
 
@@ -66,7 +66,16 @@
     border-bottom-style: solid;
     border-bottom-color: #52FF66;
   }
-  word-recorder {
+  #record-elem {
+    width: 100vw;
+    height: 79.98vh;
+    content: 'viewport-units-buggyfill; width: 100vw; height: 79.98vh;';
+    background: rgba(238,197,145,0.7);
+  }
+  word-recorder iron-icon {
+    color: black;
+    height: 25vmax;
+    width: 25vmax;
   }
   score-board {
   }
@@ -110,7 +119,6 @@
     text-align: center;
     background: rgba(238,197,145,0.7);
     content: 'viewport-units-buggyfill; width: 33.33vw; height: 26.66vh;';
-
   }
   letter-card:focus {
     z-index: 10;
@@ -125,7 +133,7 @@
   }
   .card-body {
   }
-  core-collapse {
+  iron-collapse {
     background: rgba(200,170,160, 1.0);
   }
   .mini-menu {
@@ -133,7 +141,8 @@
     padding: 1vh 1vw;
     content: 'viewport-units-buggyfill; padding: 1vh 1vw;';
   }
-  core-icon {
+  iron-icon {
+    font-size: 14px;
     height: 7vh;
     width: 7vh;
     color: white;
@@ -147,10 +156,12 @@
   paper-ripple {
     color: #18C924; /* greenish */
   }
-  paper-icon-button {
-    font-size: 14px;
-  }
-  core-overlay {
+  .help-box {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
 		box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-webkit-user-select: none;
@@ -162,6 +173,12 @@
 		outline: 1px solid rgba(0,0,0,0.2);
 		box-shadow: 0 4px 16px rgba(0,0,0,0.2);
 		overflow: auto;
+		z-index: 100;
+  }
+  #overlaycontainer {
+    background-color: rgba(255,255,255,0.7);
+    width: 100%;
+    height: 100%;
   }
   .right-to-left {
     transform: rotateY(180deg);
@@ -179,7 +196,7 @@
     top: 0;
     right: 0;
   }
-  #helpoverlay core-icon {
+  #helpoverlay iron-icon {
     color: black;
   }
   #jumbotron-text {
@@ -368,11 +385,15 @@
       font-size: 10vh;
       content: 'viewport-units-buggyfill; font-size: 12vh;';
     }
-    core-icon {
+    iron-icon {
       height: 7vw;
       width: 7vw;
       color: white;
       content: 'viewport-units-buggyfill; width: 7vw; height: 7vw;';
+    }
+    word-recorder iron-icon {
+      height: 33.33vmax;
+      width: 33.33vmax;
     }
 
   }
