major design changes

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -73,11 +73,12 @@
     background: rgba(238,197,145,0.7);
   }
   word-recorder iron-icon {
-    color: black;
+    color: #222;
     height: 25vmax;
     width: 25vmax;
   }
   score-board {
+    font-size: 6vh;
   }
   jumbotron-text {
     font-size: 7vh;
@@ -146,6 +147,9 @@
     height: 7vh;
     width: 7vh;
     color: white;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
     content: 'viewport-units-buggyfill; width: 7vh; height: 7vh;';
   }
   .content-span {
@@ -209,9 +213,9 @@
     text-transform: capitalize;
   }
   .glow-text {
-    -webkit-animation: glowtext 1.5s infinite alternate;
-    -moz-animation: glowtext 1.5s infinite alternate;
-    animation: glowtext 1.5s infinite alternate;
+    -webkit-animation: glowtext 1.5s 10 alternate;
+    -moz-animation: glowtext 1.5s 10 alternate;
+    animation: glowtext 1.5s 10 alternate;
     /*
     -webkit-animation: fliptext 2s ease-in-out 2;
     -moz-animation: fliptext 2s ease-in-out 2;
@@ -338,9 +342,9 @@
     }
   }
   .glow-yellow {
-    -webkit-animation: glowyellow 1.5s ease-in-out infinite alternate;
-    -moz-animation: glowyellow 1.5s ease-in-out infinite alternate;
-    animation: glowyellow 1.5s ease-in-out infinite alternate;
+    -webkit-animation: glowyellow 1.5s ease-in-out 10 alternate;
+    -moz-animation: glowyellow 1.5s ease-in-out 10 alternate;
+    animation: glowyellow 1.5s ease-in-out 10 alternate;
     /*
     this would be a less CPU intensive operation
     -webkit-animation: fliptext 2s ease-in-out 2;
@@ -390,6 +394,9 @@
       width: 7vw;
       color: white;
       content: 'viewport-units-buggyfill; width: 7vw; height: 7vw;';
+    }
+    score-board {
+      font-size: 6vw;
     }
     word-recorder iron-icon {
       height: 33.33vmax;
